--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -28,12 +28,12 @@
             android:src="@drawable/pausebtn"
             android:background="#00FFFFFF"/>
         <ImageButton
-            android:id="@+id/btn_setting"
+            android:id="@+id/btn_soundon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingRight="5dp"
             android:paddingTop="5dp"
-            android:src="@drawable/settingbtn"
+            android:src="@drawable/soundon"
             android:background="#00FFFFFF"/>
     </LinearLayout>
 
