--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -15,7 +15,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/nanum"
-            android:text="00:00"
+            android:text=""
             android:textColor="#000000"
             android:textSize="30sp"
             android:paddingTop="15dp"
