--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -1,103 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@drawable/gamebackground"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+<!--    <include layout="@layout/activity_pause"/>-->
 
     <LinearLayout
+        android:id="@+id/lineargame"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="right">
-        <TextView
-            android:id="@+id/timer"
-            android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/nanum"
-            android:text=""
-            android:textColor="#000000"
-            android:textSize="30sp"
-            android:paddingTop="15dp"
-            android:paddingRight="5dp"/>
-        <ImageButton
-            android:id="@+id/btn_pause"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingTop="5dp"
-            android:src="@drawable/pausebtn"
-            android:background="#00FFFFFF"/>
-        <ImageButton
-            android:id="@+id/btn_soundon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingRight="5dp"
-            android:paddingTop="5dp"
-            android:src="@drawable/soundon"
-            android:background="#00FFFFFF"/>
+            android:gravity="right">
+            <TextView
+                android:id="@+id/timer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/nanum"
+                android:text=""
+                android:textColor="#000000"
+                android:textSize="30sp"
+                android:paddingTop="15dp"
+                android:paddingRight="5dp"/>
+            <ImageButton
+                android:id="@+id/btn_pause"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingTop="5dp"
+                android:src="@drawable/pausebtn"
+                android:background="#00FFFFFF"/>
+            <ImageButton
+                android:id="@+id/btn_soundon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingRight="5dp"
+                android:paddingTop="5dp"
+                android:src="@drawable/soundon"
+                android:background="#00FFFFFF"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="85dp"
+            android:layout_marginTop="20dp"
+            android:gravity="center">
+            <ImageView
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:src="@drawable/red"
+                android:visibility="visible"/>
+            <ImageView
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:src="@drawable/blue"
+                android:visibility="visible"/>
+            <ImageView
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:src="@drawable/gray"
+                android:visibility="visible"/>
+            <ImageView
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:src="@drawable/red"
+                android:visibility="visible"/>
+            <ImageView
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:src="@drawable/purple"
+                android:visibility="visible"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="85dp"
+            android:gravity="center">
+            <ImageView
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:src="@drawable/gray"
+                android:visibility="visible"/>
+            <ImageView
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:src="@drawable/green"
+                android:visibility="visible"/>
+            <ImageView
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:src="@drawable/purple"
+                android:visibility="visible"/>
+            <ImageView
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:src="@drawable/blue"
+                android:visibility="visible"/>
+            <ImageView
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:src="@drawable/yellow"
+                android:visibility="visible"/>
+        </LinearLayout>
     </LinearLayout>
 
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="85dp"
-        android:layout_marginTop="20dp"
-        android:gravity="center">
-        <ImageView
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:src="@drawable/red"
-            android:visibility="visible"/>
-        <ImageView
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:src="@drawable/blue"
-            android:visibility="visible"/>
-        <ImageView
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:src="@drawable/gray"
-            android:visibility="visible"/>
-        <ImageView
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:src="@drawable/red"
-            android:visibility="visible"/>
-        <ImageView
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:src="@drawable/purple"
-            android:visibility="visible"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="85dp"
-        android:gravity="center">
-        <ImageView
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:src="@drawable/gray"
-            android:visibility="visible"/>
-        <ImageView
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:src="@drawable/green"
-            android:visibility="visible"/>
-        <ImageView
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:src="@drawable/purple"
-            android:visibility="visible"/>
-        <ImageView
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:src="@drawable/blue"
-            android:visibility="visible"/>
-        <ImageView
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:src="@drawable/yellow"
-            android:visibility="visible"/>
-    </LinearLayout>
-
-</LinearLayout>
+</FrameLayout>
