--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -1,109 +1,179 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@drawable/gamebackground"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-<!--    <include layout="@layout/activity_pause"/>-->
 
     <LinearLayout
-        android:id="@+id/lineargame"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-        <LinearLayout
-            android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="right">
+        <TextView
+            android:id="@+id/timer"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="right">
-            <TextView
-                android:id="@+id/timer"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/nanum"
-                android:text=""
-                android:textColor="#000000"
-                android:textSize="30sp"
-                android:paddingTop="15dp"
-                android:paddingRight="5dp"/>
-            <ImageButton
-                android:id="@+id/btn_pause"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingTop="5dp"
-                android:src="@drawable/pausebtn"
-                android:background="#00FFFFFF"/>
-            <ImageButton
-                android:id="@+id/btn_soundon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingRight="5dp"
-                android:paddingTop="5dp"
-                android:src="@drawable/soundon"
-                android:background="#00FFFFFF"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="85dp"
-            android:layout_marginTop="20dp"
-            android:gravity="center">
-            <ImageView
-                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:src="@drawable/red"
-                android:visibility="visible"/>
-            <ImageView
-                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:src="@drawable/blue"
-                android:visibility="visible"/>
-            <ImageView
-                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:src="@drawable/gray"
-                android:visibility="visible"/>
-            <ImageView
-                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:src="@drawable/red"
-                android:visibility="visible"/>
-            <ImageView
-                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:src="@drawable/purple"
-                android:visibility="visible"/>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="85dp"
-            android:gravity="center">
-            <ImageView
-                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:src="@drawable/gray"
-                android:visibility="visible"/>
-            <ImageView
-                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:src="@drawable/green"
-                android:visibility="visible"/>
-            <ImageView
-                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:src="@drawable/purple"
-                android:visibility="visible"/>
-            <ImageView
-                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:src="@drawable/blue"
-                android:visibility="visible"/>
-            <ImageView
-                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:src="@drawable/yellow"
-                android:visibility="visible"/>
-        </LinearLayout>
+            android:fontFamily="@font/nanum"
+            android:text=""
+            android:visibility="visible"
+            android:textColor="#000000"
+            android:textSize="30sp"
+            android:paddingTop="15dp"
+            android:paddingRight="5dp"/>
+        <ImageButton
+            android:id="@+id/btn_pause"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="5dp"
+            android:src="@drawable/pausebtn"
+            android:background="#00FFFFFF"/>
+        <ImageButton
+            android:id="@+id/btn_soundon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingRight="5dp"
+            android:paddingTop="5dp"
+            android:src="@drawable/soundon"
+            android:background="#00FFFFFF"/>
     </LinearLayout>
 
-</FrameLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="85dp"
+        android:layout_marginTop="20dp"
+        android:gravity="center">
+        <ImageView
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:src="@drawable/red"
+            android:layout_marginRight="15dp"
+            android:visibility="visible"/>
+        <ImageView
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:src="@drawable/blue"
+            android:layout_marginRight="15dp"
+            android:visibility="visible"/>
+        <ImageView
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:src="@drawable/gray"
+            android:layout_marginRight="15dp"
+            android:visibility="visible"/>
+        <ImageView
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:src="@drawable/red"
+            android:layout_marginRight="15dp"
+            android:visibility="visible"/>
+        <ImageView
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:src="@drawable/purple"
+            android:visibility="visible"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="85dp"
+        android:gravity="center">
+        <ImageView
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginRight="15dp"
+            android:src="@drawable/gray"
+            android:visibility="visible"/>
+        <ImageView
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginRight="15dp"
+            android:src="@drawable/green"
+            android:visibility="visible"/>
+        <ImageView
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginRight="15dp"
+            android:src="@drawable/purple"
+            android:visibility="visible"/>
+        <ImageView
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginRight="15dp"
+            android:src="@drawable/blue"
+            android:visibility="visible"/>
+        <ImageView
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:src="@drawable/yellow"
+            android:visibility="visible"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:orientation="horizontal"
+        android:gravity="center">
+        <EditText
+            android:layout_width="274dp"
+            android:layout_height="50dp"
+            android:paddingLeft="20dp"
+            android:paddingBottom="5dp"
+            android:background="@drawable/inputfield"
+            android:hint="정답을 입력해 주세요." />
+        <Button
+            android:id="@+id/answer_btn"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="@drawable/btninput"
+            android:layout_marginLeft="-10dp" />
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/q1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="20dp"
+        android:visibility="visible" >
+        <ImageView
+            android:layout_width="110dp"
+            android:layout_height="110dp"
+            android:src="@drawable/o_ui"
+            android:layout_marginLeft="20dp"
+            android:visibility="visible" />
+        <ImageView
+            android:layout_width="110dp"
+            android:layout_height="110dp"
+            android:layout_marginTop="120dp"
+            android:layout_marginLeft="-90dp"
+            android:src="@drawable/e_ui"
+            android:visibility="visible" />
+        <ImageView
+            android:layout_width="110dp"
+            android:layout_height="110dp"
+            android:src="@drawable/b_ui"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="120dp"
+            android:visibility="visible" />
+        <ImageView
+            android:layout_width="110dp"
+            android:layout_height="110dp"
+            android:layout_marginLeft="-130dp"
+            android:layout_marginTop="-20dp"
+            android:src="@drawable/t_ui"
+            android:visibility="visible" />
+        <ImageView
+            android:layout_width="110dp"
+            android:layout_height="110dp"
+            android:src="@drawable/c_ui"
+            android:layout_marginTop="25dp"
+            android:visibility="visible" />
+        <ImageView
+            android:layout_width="110dp"
+            android:layout_height="110dp"
+            android:layout_marginTop="150dp"
+            android:layout_marginLeft="-80dp"
+            android:src="@drawable/j_ui"
+            android:visibility="visible" />
+
+
+    </LinearLayout>
+
+</LinearLayout>
