--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@drawable/gamebackground"
+    android:keepScreenOn="true"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
