--- a/app/src/main/res/layout/activity_gameover.xml
+++ b/app/src/main/res/layout/activity_gameover.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/lineargameover"
@@ -9,6 +9,22 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/gameover2"/>
-
-</LinearLayout>
+        android:layout_marginTop="-100dp"
+        android:src="@drawable/gameover"/>
+    <Button
+        android:id="@+id/overbtnhome"
+        android:layout_width="172dp"
+        android:layout_height="120dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="360dp"
+        android:background="@drawable/btnhome"
+        />
+    <Button
+        android:id="@+id/overbtnrefresh"
+        android:layout_width="172dp"
+        android:layout_height="120dp"
+        android:layout_marginTop="360dp"
+        android:layout_toRightOf="@+id/overbtnhome"
+        android:background="@drawable/btnrefresh"
+        />
+</RelativeLayout>
