--- a/app/src/main/res/layout/activity_gameover.xml
+++ b/app/src/main/res/layout/activity_gameover.xml
@@ -1,30 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/lineargameover"
     android:padding="20dp"
+    android:orientation="vertical"
+    android:gravity="center"
     android:background="@android:color/transparent">
 
     <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="-100dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:src="@drawable/gameover"/>
-    <Button
-        android:id="@+id/overbtnhome"
-        android:layout_width="172dp"
-        android:layout_height="120dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="360dp"
-        android:background="@drawable/btnhome"
-        />
-    <Button
-        android:id="@+id/overbtnrefresh"
-        android:layout_width="172dp"
-        android:layout_height="120dp"
-        android:layout_marginTop="360dp"
-        android:layout_toRightOf="@+id/overbtnhome"
-        android:background="@drawable/btnrefresh"
-        />
-</RelativeLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center">
+        <Button
+            android:id="@+id/overbtnhome"
+            android:layout_width="172dp"
+            android:layout_height="100dp"
+            android:layout_marginLeft="10dp"
+            android:background="@drawable/btnhome" />
+        <Button
+            android:id="@+id/overbtnrefresh"
+            android:layout_width="172dp"
+            android:layout_height="100dp"
+            android:layout_toRightOf="@+id/overbtnhome"
+            android:background="@drawable/btnrefresh" />
+    </LinearLayout>
+</LinearLayout>
