--- a/app/src/main/res/layout/activity_gameover.xml
+++ b/app/src/main/res/layout/activity_gameover.xml
@@ -12,6 +12,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/gameover"/>
+    <TextView
+        android:id="@+id/finalscore"
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="SCORE : "
+        android:layout_marginTop="-20dp"
+        android:textColor="#FFFFFF"
+        android:textSize="30sp"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -20,13 +29,13 @@
         <Button
             android:id="@+id/overbtnhome"
             android:layout_width="172dp"
-            android:layout_height="100dp"
+            android:layout_height="90dp"
             android:layout_marginLeft="10dp"
             android:background="@drawable/btnhome" />
         <Button
             android:id="@+id/overbtnrefresh"
             android:layout_width="172dp"
-            android:layout_height="100dp"
+            android:layout_height="90dp"
             android:layout_toRightOf="@+id/overbtnhome"
             android:background="@drawable/btnrefresh" />
     </LinearLayout>
