--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -6,38 +6,53 @@
     android:background="@drawable/gamebackground"
     android:keepScreenOn="true"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="right">
-        <TextView
-            android:id="@+id/timer"
-            android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/nanum"
-            android:text=""
-            android:visibility="visible"
-            android:textColor="#000000"
-            android:textSize="30sp"
-            android:paddingTop="15dp"
-            android:paddingRight="5dp"/>
-        <ImageButton
-            android:id="@+id/btn_pause"
-            android:layout_width="wrap_content"
+            android:gravity="left">
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/hint"
+                android:background="#00FFFFFF"
+                android:clickable="false"
+                android:paddingTop="5dp"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="5dp"
-            android:src="@drawable/pausebtn"
-            android:background="#00FFFFFF"/>
-        <ImageButton
-            android:id="@+id/btn_soundon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingRight="5dp"
-            android:paddingTop="5dp"
-            android:src="@drawable/soundon"
-            android:background="#00FFFFFF"/>
-    </LinearLayout>
+            android:gravity="right">
+            <TextView
+                android:id="@+id/timer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/nanum"
+                android:text=""
+                android:visibility="visible"
+                android:textColor="#000000"
+                android:textSize="30sp"
+                android:paddingTop="15dp"
+                android:paddingRight="5dp"/>
+            <ImageButton
+                android:id="@+id/btn_pause"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingTop="5dp"
+                android:src="@drawable/pausebtn"
+                android:background="#00FFFFFF"/>
+            <ImageButton
+                android:id="@+id/btn_soundon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingRight="5dp"
+                android:paddingTop="5dp"
+                android:src="@drawable/soundon"
+                android:background="#00FFFFFF"/>
+        </LinearLayout>
+    </RelativeLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
