--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -12,14 +12,25 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="left">
+            android:gravity="left"
+            android:orientation="horizontal">
             <ImageButton
+                android:id="@+id/btn_hint"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/hint"
                 android:background="#00FFFFFF"
-                android:clickable="false"
                 android:paddingTop="5dp"/>
+
+            <TextView
+                android:id="@+id/hint_text"
+                android:visibility="invisible"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/hintfield"
+                android:layout_marginLeft="-10dp"
+                android:layout_marginTop="5dp"
+                android:paddingTop="5dp" />
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -156,7 +167,7 @@
                 android:layout_gravity="center_horizontal|bottom"
                 android:layout_marginLeft="-312dp"
                 android:layout_marginBottom="20dp"
-                android:hint="dkdkdk"
+                android:hint=""
                 android:background="@drawable/answer_input"
                 android:paddingLeft="230px" />
             <Button
