--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -14,23 +14,24 @@
             android:layout_height="wrap_content"
             android:gravity="left"
             android:orientation="horizontal">
-            <ImageButton
+            <Button
                 android:id="@+id/btn_hint"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/hint"
-                android:background="#00FFFFFF"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:background="@drawable/hint"
                 android:paddingTop="5dp"/>
 
             <TextView
                 android:id="@+id/hint_text"
-                android:visibility="invisible"
-                android:layout_width="wrap_content"
+                android:fontFamily="@font/nanum"
+                android:layout_width="120dp"
                 android:layout_height="wrap_content"
-                android:background="@drawable/hintfield"
                 android:layout_marginLeft="-10dp"
-                android:layout_marginTop="5dp"
-                android:paddingTop="5dp" />
+                android:background="@drawable/hintfield"
+                android:gravity="center_vertical"
+                android:paddingTop="5dp"
+                android:textSize="15sp"
+                android:visibility="invisible" />
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
