--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -155,6 +155,7 @@
             android:layout_marginTop="10dp"
             android:visibility="invisible">
             <ImageView
+                android:id="@+id/imgq1"
                 android:layout_width="350dp"
                 android:layout_height="250dp"
                 android:layout_marginLeft="30dp"
